Modo oscuro agregado

--- a/Inicio.html
+++ b/Inicio.html
@@ -49,6 +49,12 @@
               <li class="nav-item">
                 <a class="nav-link login" href="Registrarse.html">Registrarse</a>
               </li>
+              <li> <!--Modo oscuro-->
+                <input type="image" src="Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
+                <script src="js/darkmode.js"></script>
+                <input type="image" src="Imágenes/Icons/Sun .png" width="35px" onclick="DarkMode()">
+                <script src="js/darkmode.js"></script>
+              </li>
             </ul>
           </div>
         </div>
@@ -96,6 +102,7 @@
 
 
     <!--Contenido de la página-->
+    <br><br>
     <div class="container">
       <div class="bienvenida">
         <h4>¡Bienvenido a Fundación Apoyo!</h4>
