--- a/Contacto.html
+++ b/Contacto.html
@@ -37,6 +37,12 @@
               <li class="nav-item">
                 <a class="nav-link login" href="Registrarse.html">Registrarse</a>
               </li>
+              <li> <!--Modo oscuro-->
+                <input type="image" src="Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
+                <script src="js/darkmode.js"></script>
+                <input type="image" src="Imágenes/Icons/Sun .png" width="35px" onclick="DarkMode()">
+                <script src="js/darkmode.js"></script>
+              </li>
           </ul>
         </div>
       </div>
