--- a/Contacto.html
+++ b/Contacto.html
@@ -85,7 +85,7 @@
         <div class="col">
           <script src="js/Count.js"></script>
           <label for="comentario" >Comentario</label>
-          <textarea id="comentario"  placeholder="Ingrese su mensaje" name="comentario" onkeypress="textareaLengthCheck(this)" required> </textarea>
+          <textarea id="comentario" maxlength="250" placeholder="Ingrese su mensaje" name="comentario" onkeypress="textareaLengthCheck(this)" required> </textarea>
           <p id="lblRemainingCount"></p>
         </div>
         <input type="submit" onclick="enviar()" class="button" id="enviar">
