--- a/Registrarse.html
+++ b/Registrarse.html
@@ -57,6 +57,23 @@
     </div>
     </nav>
 
+    <center>
+      <table>
+        <script src="js/registrar.js"></script>
+        <tr>
+          <td><label>Usuario: </label></td> <td><input type="text" name="usuario" id="usuario"required></td>
+        </tr>
+        <tr>
+          <td><label>Contraseña: </label></td> <td><input type="password" name="pass" id="pass"required></td>
+        </tr>
+        <tr>
+          <td><label>Correo:</label></td> <td><input type="email" name="mail" id="mail"required></td>
+        </tr>
+        <tr>
+          <td colspan="2"><input type="button" name="btnRegistro" id="btnRegistro" onclick="registrar()" value="Registrar" style = "width: 100%"> </td>
+        </tr>
+      </table>
+    </center>
 
     
      <!--Pie de pagina-->
