Cambio para pages

--- a/Inicio.html
+++ b/Inicio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <!--Carousel Links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -50,10 +50,10 @@
                 <a class="nav-link login" href="Registrarse.html">Registrarse</a>
               </li>
               <li> <!--Modo oscuro-->
-                <input type="image" src="Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
-                <script src="js/darkmode.js"></script>
-                <input type="image" src="Imágenes/Icons/Sun .png" width="35px" onclick="DarkMode()">
-                <script src="js/darkmode.js"></script>
+                <input type="image" src="assets/Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
+                <script src="assets/js/darkmode.js"></script>
+                <input type="image" src="assets/Imágenes/Icons/Sun .png" width="35px" onclick="DarkMode()">
+                <script src="assets/js/darkmode.js"></script>
               </li>
             </ul>
           </div>
@@ -74,12 +74,12 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="Imágenes/Abuelitos/Thumbs up (Pequeño).jpg" alt="First slide">
+                <img class="d-block w-100" src="assets/Imágenes/Abuelitos/Thumbs up (Pequeño).jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="Imágenes/Abuelitos/la_jungla_-_social_424969106_133218578_1706x960 (Pequeño).jpg" alt="Second slide">
+                <img class="d-block w-100" src="assets/Imágenes/Abuelitos/la_jungla_-_social_424969106_133218578_1706x960 (Pequeño).jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" alt="Third slide">
@@ -130,9 +130,9 @@
         <h4>Síguenos</h4>
         <div class="col-12 ">
           <ul class="list-inline nav">
-            <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noopener"> <img src="Imágenes/facebook.png" style="width: 30px" class="img-fluid" alt="facebook"> </a></li>
-            <li class="list-inline-item"><a href="https://www.youtube.com" target="_blank" rel="noopener"> <img src="Imágenes/kisspng-united-states-youtube-logo-youtube-play-button-transparent-png-5ab1be08946c16.888989591521597960608.png" style="width: 30px" class="img-fluid" alt="youtube"> </a></li>
-            <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noopener"> <img src="Imágenes/Instagram-Logo-PNG-Images-HD.png" style="width: 30px" class="img-fluid" alt="instagram"> </a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/facebook.png" style="width: 30px" class="img-fluid" alt="facebook"> </a></li>
+            <li class="list-inline-item"><a href="https://www.youtube.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/kisspng-united-states-youtube-logo-youtube-play-button-transparent-png-5ab1be08946c16.888989591521597960608.png" style="width: 30px" class="img-fluid" alt="youtube"> </a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/Instagram-Logo-PNG-Images-HD.png" style="width: 30px" class="img-fluid" alt="instagram"> </a></li>
           </ul>
         </div>
         <a href="./Contacto.html" class="trabaja con nosotros">Trabaja con nosotros</a>
