--- a/Registrarse.html
+++ b/Registrarse.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
@@ -37,10 +37,10 @@
               <a class="nav-link login" href="Registrarse.html">Registrarse</a>
             </li>
             <li> <!--Modo oscuro-->
-              <input type="image" src="Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
-              <script src="js/darkmode.js"></script>
-              <input type="image" src="Imágenes/Icons/Sun .png" width="35px" onclick="DarkMode()">
-              <script src="js/darkmode.js"></script>
+              <input type="image" src="assets/Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
+              <script src="assets/js/darkmode.js"></script>
+              <input type="image" src="assets/Imágenes/Icons/Sun .png" width="35px" onclick="DarkMode()">
+              <script src="assets/js/darkmode.js"></script>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
 
     <center>
       <table>
-        <script src="js/registrar.js"></script>
+        <script src="assets/js/registrar.js"></script>
         <tr>
           <td><label>Usuario: </label></td> <td><input type="text" name="usuario" id="usuario"required></td>
         </tr>
@@ -89,9 +89,9 @@
         <h4>Síguenos</h4>
         <div class="col-12 ">
           <ul class="list-inline nav">
-            <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noopener"> <img src="Imágenes/facebook.png" style="width: 30px" class="img-fluid" alt="facebook"> </a></li>
-            <li class="list-inline-item"><a href="https://www.youtube.com" target="_blank" rel="noopener"> <img src="Imágenes/kisspng-united-states-youtube-logo-youtube-play-button-transparent-png-5ab1be08946c16.888989591521597960608.png" style="width: 30px" class="img-fluid" alt="youtube"> </a></li>
-            <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noopener"> <img src="Imágenes/Instagram-Logo-PNG-Images-HD.png" style="width: 30px" class="img-fluid" alt="instagram"> </a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/facebook.png" style="width: 30px" class="img-fluid" alt="facebook"> </a></li>
+            <li class="list-inline-item"><a href="https://www.youtube.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/kisspng-united-states-youtube-logo-youtube-play-button-transparent-png-5ab1be08946c16.888989591521597960608.png" style="width: 30px" class="img-fluid" alt="youtube"> </a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/Instagram-Logo-PNG-Images-HD.png" style="width: 30px" class="img-fluid" alt="instagram"> </a></li>
           </ul>
         </div>
         <a href="./Contacto.html" class="trabaja con nosotros">Trabaja con nosotros</a>
