--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="Inicio.html">Fundación Apoyo</a>
+          <a class="navbar-brand" href="Index.html">Fundación Apoyo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -122,7 +122,7 @@
     <hr>
     <div class="container footer">
       <div class="row ">
-    <div class="col-12 col-sm-7 col-md-3 logo box "><a class="ps-5" href="Inicio.html"><img src="Imágenes/Fundación_apoyo-removebg-preview.png" style="width: 250px;" alt="FA"> <span style="font-size: large; font-family: cursive; color: rgb(23, 23, 23);"></span></a></div>
+    <div class="col-12 col-sm-7 col-md-3 logo box "><a class="ps-5" href="Index.html"><img src="Imágenes/Fundación_apoyo-removebg-preview.png" style="width: 250px;" alt="FA"> <span style="font-size: large; font-family: cursive; color: rgb(23, 23, 23);"></span></a></div>
     <div class="col-12 col-sm-5 col-md-3 box">
        
     </div>
