--- a/Contacto.html
+++ b/Contacto.html
@@ -19,23 +19,23 @@
     <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="Index.html">Fundación Apoyo</a>
+        <a class="navbar-brand" href="index.html">Fundación Apoyo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Contacto.html">Contacto</a>
+              <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Nosotros.html">Nosotros</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link login" href="Login.html">Login</a>
+                <a class="nav-link login" href="login.html">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link login" href="Registrarse.html">Registrarse</a>
+                <a class="nav-link login" href="registrarse.html">Registrarse</a>
               </li>
               <li> <!--Modo oscuro-->
                 <input type="image" src="assets/Imágenes/Icons/Moon.png" width="35px" onclick="DarkMode()">
@@ -104,7 +104,7 @@
     <hr>
     <div class="container footer">
       <div class="row ">
-    <div class="col-12 col-sm-7 col-md-3 logo box "><a class="ps-5" href="Index.html"><img src="Imágenes/Fundación_apoyo-removebg-preview.png" style="width: 250px;" alt="FA"> <span style="font-size: large; font-family: cursive; color: rgb(23, 23, 23);"></span></a></div>
+    <div class="col-12 col-sm-7 col-md-3 logo box "><a class="ps-5" href="index.html"><img src="Imágenes/Fundación_apoyo-removebg-preview.png" style="width: 250px;" alt="FA"> <span style="font-size: large; font-family: cursive; color: rgb(23, 23, 23);"></span></a></div>
     <div class="col-12 col-sm-5 col-md-3 box">
        
     </div>
@@ -117,7 +117,7 @@
             <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noopener"> <img src="assets/Imágenes/Instagram-Logo-PNG-Images-HD.png" style="width: 30px" class="img-fluid" alt="instagram"> </a></li>
           </ul>
         </div>
-        <a href="./Contacto.html" class="trabaja con nosotros">Trabaja con nosotros</a>
+        <a href="./contacto.html" class="trabaja con nosotros">Trabaja con nosotros</a>
     </div>
     <div class="col-12 col-sm-3 mt-3">
         <ul>
