--- a/nosotros.html
+++ b/nosotros.html
@@ -62,7 +62,7 @@
     <hr>
     <div class="container footer">
       <div class="row ">
-    <div class="col-12 col-sm-7 col-md-3 logo box "><a class="ps-5" href="index.html"><img src="Imágenes/Fundación_apoyo-removebg-preview.png" style="width: 250px;" alt="FA"> <span style="font-size: large; font-family: cursive; color: rgb(23, 23, 23);"></span></a></div>
+    <div class="col-12 col-sm-7 col-md-3 logo box "><a class="ps-5" href="index.html"><img src="assets/Imágenes/Fundación_apoyo-removebg-preview.png" style="width: 250px;" alt="FA"> <span style="font-size: large; font-family: cursive; color: rgb(23, 23, 23);"></span></a></div>
     <div class="col-12 col-sm-5 col-md-3 box">
        
     </div>
